# scribebase

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.weaviate.yml  pyproject.toml
docs/: article-automation-contract.md  article-ingestion-handoff.md  macmini-deployment.md
docs/launchd/: com.scribebase.embedding.plist.example  com.scribebase.ocr.plist.example  com.scribebase.server.plist.example  com.scribebase.worker.plist.example
docs/skills/: README.md
docs/skills/scribebase-context/: SKILL.md
docs/skills/scribebase-ingest/: SKILL.md
scripts/: run_apple_vision_ocr.swift  run_local_ocr.py  run_local_ocr.py.example
src/scribebase/: __init__.py  cli.py  config.py  durable_fs.py  errors.py  extraction.py  indexing.py  logging_utils.py  models.py  paths.py  pdf_router.py  server.py  server_jobs.py  source_registry.py
src/scribebase/chunking/: chunker.py
src/scribebase/embeddings/: llamacpp_client.py
src/scribebase/extractors/: image_renderer.py  pymupdf_extractor.py
src/scribebase/llm/: openai_compatible.py  prompts.py
src/scribebase/markdown/: frontmatter.py  normalize.py
src/scribebase/ocr/: base.py  health.py  shell_provider.py
tests/: test_chunker.py  test_config.py  test_context_pack.py  test_doctor.py  test_durable_fs.py  test_embedding_client.py  test_extract_pdf.py  test_extract_text.py  test_indexing.py  test_ocr_health.py  test_page_metadata.py  test_pdf_detection.py  test_scope.py  test_server.py  test_server_jobs.py  test_shell_ocr_provider.py  test_source_identity.py  test_source_registry.py  test_weaviate_store.py
(+7 files in other folders)
