[project]
name = "scribebase"
version = "0.1.0"
description = "Local-first OCR, Markdown, and Weaviate RAG study app."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Ramtin Javanmardi" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
