[project]
name = "scribebase"
version = "0.1.0"
description = "Local-first OCR, Markdown, and Weaviate RAG app."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ramtin Javanmardi" }
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pymupdf>=1.24",
  "pymupdf4llm>=0.0.17",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "weaviate-client>=4.7",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.115",
  "pytest>=8.0",
  "ruff>=0.5",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
scribebase = "scribebase.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
